# mcp

./: .gitignore  .rules  CLAUDE.md  LICENSE  MCP_QUICK_REFERENCE.md  MCP_SERVERS_README.md  README.md  agentical_app.py  claude_4_sonnet_complete_inventory_20250601_074337.json  claude_4_sonnet_complete_inventory_20250614_080307.json  config.sys  context.md  dev_report.md  main.py  mcp-server-api.py  mcp-servers.json  mcp-status-monitor.py  mcp-status.json  mcp_instructions.md  primer.md  run-mcp-tool.sh  spec.md  start-mcp-api.sh  start-mcp.sh  start-servers.sh  tools.md  update-mcp-status.py  update-mcp-status.sh  update-status.sh  verify-tools.sh
agentical/: AGENTICAL_TASK_SPECIFICATION.md  CLAUDE.md  FRONTEND_SPECIFICATION.md  README.md  REPOSITORY_STRUCTURE_ANALYSIS.md  TASK_2_2_2_3_COMPLETION_SUMMARY.md  TASK_3_1_COMPLETION_SUMMARY.md  TASK_3_2_FINAL_COMPLETION.md  TASK_3_4_COMPLETION_SUMMARY.md  TASK_6_1_WORKFLOW_ENGINE_CORE_COMPLETION.md  TASK_7_1_MCP_TOOLS_INTEGRATION_COMPLETION.md  TASK_7_1_MCP_TOOLS_INTEGRATION_FINAL_COMPLETION.md  __init__.py  alembic.ini  main.py  pyproject.toml  pytest.ini  simple_task_4_validation.py  simple_task_5_2_5_3_validation.py  task_4_1_architecture_review.py  task_4_2_architecture_review.py  test_playbook_direct.py  test_task_1_1.py  test_task_1_5.py  test_task_2_1.py  test_task_2_3.py  test_task_2_3_simple.py  test_task_2_3_validation.py  test_task_3_1.py  test_task_4_2_agent_registry.py  test_task_4_3_base_agent_types.py  test_task_5_2_5_3_complete.py  test_task_6_1_workflow_engine_core.py  test_task_7_1_mcp_tools_integration.py  validate_all_models.py  validate_playbook_file.py  validate_task_2_1.py  validate_task_2_3.py  validate_task_3_1.py  validate_task_3_4.py  (+3 more)
agentical/PRD/: Agentical_PRD.md  PRD_small.txt
agentical/agents/: __init__.py  agent_registry_enhanced.py  base_agent.py  codifier_agent.py  enhanced_base_agent.py  generic_agent.py  io_agent.py  playbook_agent.py  registry_integration.py  super_agent.py
agentical/agents/types/: __init__.py  code_agent.py  data_science_agent.py  dba_agent.py  devops_agent.py  gcp_agent.py  github_agent.py  infosec_agent.py  legal_agent.py  pulumi_agent.py  remaining_agents.py  research_agent.py  tester_agent.py  token_agent.py  uat_agent.py  ux_agent.py
agentical/alembic/: env.py
agentical/alembic/versions/: 2025_06_11_2249-274cb5558f96_initial_database_schema.py
agentical/api/: __init__.py  agents.py  health.py  router.py  security_integration.py
agentical/api/v1/: __init__.py
agentical/core/: __init__.py  encryption.py  performance.py  resources.py  security.py  security_config.py  structured_logging.py  validation.py
agentical/db/: __init__.py  backup.py  config.py  graph_operations.py  graph_sync.py  init.py  knowledge_schemas.py  middleware.py  redis_client.py  surrealdb_client.py  vector_search.py
agentical/db/cache/: __init__.py
agentical/db/models/: __init__.py  agent.py  base.py  playbook.py  task.py  tool.py  user.py  workflow.py
agentical/db/repositories/: __init__.py  agent.py  analytics.py  base.py  playbook.py  task.py  tool.py  user.py  workflow.py
agentical/docs/: Agent_Reasoning_System.md  api_implementation_summary.md  workflow_quick_reference.md  workflow_types_explanation.md
agentical/examples/: monitoring_tool_demo.py
agentical/frontend/: README.md  next.config.js  tailwind.config.ts  tsconfig.tsbuildinfo
agentical/frontend/app/: globals.css  layout.tsx  page.tsx
agentical/frontend/components/: providers.tsx
agentical/frontend/scripts/: setup-frontend.md
agentical/frontend/types/: index.ts
agentical/middlewares/: __init__.py  security.py
agentical/optimization/: __init__.py
agentical/reasoning/: __init__.py  bayesian_engine.py  belief_updater.py  decision_tree.py  genetic_optimizer.py  mcp_integration.py  probabilistic_models.py  simulation_engine.py  uncertainty_quantifier.py
agentical/reports/: core_models_validation_report.json  database_schema_validation_report.json  playbook_file_validation_report.json  playbook_models_validation_report.json  task_2_3_validation_report.json  task_4_4_validation_report_20250612_031155.json  task_4_4_validation_report_20250612_031420.json  task_5_1_validation_results.json
agentical/scripts/: backup_devqai.sh  cron_config.txt
agentical/scripts/validation/: final_completion_check.py  simple_validate_task_4_4.py  validate_execution_context_standalone.py  validate_playbook_models.py  validate_task_3_1_complete.py  validate_task_4_1.py  validate_task_4_4.py  validate_task_5_1.py  validate_task_7_1_simple.py  validate_tasks_2_2_2_3.py
agentical/src/monitoring/: health.py  performance.py
agentical/tasks/: Follow_these_development_rules.md  agentical_master_plan.json  critical_path_analysis.md  prd_requirements_mapping.md  task_progress_tracker.md
agentical/tasks/old_files/: config.json  task-complexity-report.json  task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  tasks_backup.json
agentical/tasks/status_updates/: PROJECT_STATUS_TASK_3_2_COMPLETE.md  TASK_3_2_COMPLETION_SUMMARY.md  TASK_3_2_STATUS_UPDATE.md  TASK_4_1_FINAL_COMPLETION.md  TASK_4_2_FINAL_COMPLETION.md  TASK_4_3_FINAL_COMPLETION.md  TASK_4_4_FINAL_COMPLETION.md  TASK_7_1_MCP_TOOLS_INTEGRATION_COMPLETION.md  project_progress_summary.md  task_10_1_completion.md  task_10_2_completion.md  task_11_security_authentication_completed.md  task_1_1_complete.md  task_1_1_start.md  task_1_2_complete.md  task_1_2_start.md  task_1_3_complete.md  task_1_3_start.md  task_1_4_complete.md  task_1_4_start.md  task_1_5_complete.md  task_1_5_start.md  task_2_1_complete.md  task_2_1_start.md  task_2_2_complete.md  task_2_2_start.md  task_2_3_complete.md  task_2_3_start.md  task_3_1_complete.md  task_3_1_start.md  task_3_2_start.md  task_3_3_complete.md  task_3_3_start.md  (+13 more)
agentical/tests/: test_agentical.db  test_graph_operations.py  test_monitoring_tool.py
agentical/tools/: __init__.py
agentical/workflows/: __init__.py  manager.py  registry.py
mcp-servers/darwin-mcp/: README.md  pyproject.toml
(+243 files in other folders)
